[package]
name = "executor-performance"
version = "0.1.0"
authors = ["Lars Kroll <lkroll@kth.se>"]

[dependencies]
synchronoise = "0.4"
time = "0.1"

[dependencies.rustc-test]
version = "0.2"
#features = ["asm_black_box"] # uncomment if you want to use --pre or --post
# otherwise the compiler will just optimise out the useless work they do

[dependencies.clap]
version = "2"
features = ["color"]

[dependencies.executors]
path = "../executors/"
default-features = true # to use job counting instead of timed global check set this to false and uncomment next line
#features = ["threadpool-exec", "cb-channel-exec", "workstealing-exec"]