[package]
name = "executors"
# NB: When modifying, also modify:
#   1. html_root_url in lib.rs
#   2. number in readme (for breaking changes)
version = "0.6.1"
authors = ["Lars Kroll <lkroll@kth.se>"]
edition = "2018"
description = "A collection of high-performance task executors."
documentation = "https://docs.rs/executors"
homepage = "https://github.com/Bathtor/rust-executors"
repository = "https://github.com/Bathtor/rust-executors"
readme = "../README.md"
keywords = ["executor", "concurrency", "thread"]
categories = ["concurrency", "asynchronous"]
license = "MIT"

[features]
default = ["threadpool-exec", "cb-channel-exec", "workstealing-exec", "ws-timed-fairness", "defaults"]

threadpool-exec = ["threadpool"]
cb-channel-exec = ["crossbeam-channel", "async-task"]
workstealing-exec = ["crossbeam-channel", "crossbeam-deque", "rand", "crossbeam-utils", "async-task"]
defaults = ["num_cpus"]

# In the workstealing executor, check the global queues every 1ms
ws-timed-fairness = [] #["time"]
# Otherwise check the global queues every 100 jobs

# In the workstealing executor, never park worker threads
ws-no-park = []

thread-pinning = ["core_affinity"]


[dependencies]
log 				= "0.4"
synchronoise 		= "1.0"
arr_macro 			= "0.1.2"
crossbeam-channel 	= {version = "0.4", optional = true}
threadpool 			= {version = "1.7", optional = true}
crossbeam-utils 	= {version = "0.7", optional = true}
crossbeam-deque 	= {version = "0.7", optional = true}
rand 				= {version = "0.7", optional = true}
num_cpus 			= {version = "1.12", optional = true}
core_affinity 		= {version = "0.5", optional = true}
#futures 			= {version = "0.3", optional = true}
async-task 			= {version = "3.0", optional = true}

[dev-dependencies]
env_logger 			= "0.7"
version-sync 		= "0.8"
criterion 			= "0.3"
futures 			= "0.3"


[badges]
# Maintenance: `status` is required Available options are `actively-developed`,
# `passively-maintained`, `as-is`, `none`, `experimental`, `looking-for-maintainer`
# and `deprecated`.
maintenance = { status = "actively-developed" }

travis-ci = { repository = "Bathtor/rust-executors", branch = "master" }

[[bench]]
name = "scheduler"
path = "benches/scheduler.rs"
harness = false
